Fixed sizing issue for arrow icon on mobile.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,10 @@ body {
   background-color: cornflowerblue;
 }
 
+#inputBtnArrow {
+  width: auto;
+}
+
 .flexCenter {
   display: flex;
   align-items: center;
